@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-22 12:25";
+char cvsdate[]="2004-06-22 18:23";
